package ar.edu.unlp.info.oo2.ejercicio1;

public interface T_Tweet {
	public String getText();
	public void deleteTweet();
	
}
